Format main.js with arrays

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,7 +7,7 @@
 <body>
 	<nav class="clearfix">
 		<a href="#">Instructions</a>
-		<a href="#">Game</a>
+		<a ID="board-button" href="#">Game</a>
 	</nav>
 	<h1>Memory Game</h1>
 	<h2>Instructions</h2>
@@ -15,10 +15,6 @@
 	</p>
 	<hr>
 	<div ID = "game-board" class="board"> 
-	    <div class="card"></div>
-	    <div class="card"></div>
-	    <div class="card"></div>
-	    <div class="card"></div>
 	</div>
 	<footer>Created with &hearts; by <span class="name">Jennifer Boyd</span></footer>
 	<script src="main.js"></script>
